Adding grails 3.0.1 files. Bumping version to 2.0.0-SNAPSHOT